--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.0",
     "jquery": "1.9.1",
+    "node-sass": "^4.12",
     "popper.js": "^1.16.0",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
