--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "@rails/actiontext": "^6.0.3-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.3.0",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "^4.5.0",
     "jquery": "1.9.1",
-    "node-sass": "^4.12",
     "popper.js": "^1.16.0",
     "trix": "^1.2.0",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.3.0"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
